Horizontal Scroll in Report Grid added fixed image in insurance ID Card

--- a/client/src/Components/RegistrationPatient/PatientDetails/PatientForm/PatientForm.scss
+++ b/client/src/Components/RegistrationPatient/PatientDetails/PatientForm/PatientForm.scss
@@ -64,3 +64,14 @@
     top: 20vh;
   }
 }
+
+.insurCrdImg {
+  .image-drop-area {
+    img {
+      height: 169px;
+    }
+  }
+  .Image-cropper {
+    top: 20vh;
+  }
+}
