--- a/client/src/Reports/report-style.scss
+++ b/client/src/Reports/report-style.scss
@@ -1,8 +1,11 @@
 @import "../styles/algaehCssVariables.scss";
 
+.tbl-header {
+  overflow: auto;
+}
 .tbl-content {
   height: 35vh;
-  overflow-x: auto;
+  overflow: auto;
   margin-top: 0px;
   border: 1px solid lighten($color-black, 95%) !important;
 }
@@ -21,6 +24,7 @@
     background: lighten($primary-color, 55%) !important;
     border-bottom: 1px solid lighten($primary-color, 10%) !important;
     text-transform: uppercase;
+    width: 100px;
   }
   tr {
     &:nth-child(even) {
@@ -34,6 +38,7 @@
     font-size: 1rem;
     color: lighten($color-black, 40%) !important;
     border-bottom: solid 1px rgba(255, 255, 255, 0.1);
+    width: 100px;
   }
 
   /* for custom scrollbar for webkit browser*/
